# fphoto-renamer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mock_test.html
.github/workflows/: ci.yml  cli-build.yml  installer.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: apply.rs  config.rs  constants.rs  exif_reader.rs  lib.rs  matcher.rs  metadata.rs  planner.rs  sanitize.rs  template.rs  xmp_reader.rs
crates/gui/: package-lock.json  package.json  playwright.config.mjs
crates/gui/e2e/: smoke.spec.mjs
crates/gui/e2e/support/: mock-tauri.mjs  static-server.mjs
crates/gui/src-tauri/: Cargo.toml  tauri.bundle.macos.adhoc.conf.json  tauri.conf.json
crates/gui/src-tauri/icons/: icon.icns
crates/gui/src-tauri/resources/LICENSES/: EXIFTOOL_LICENSE.txt  README.md
crates/gui/src-tauri/src/: main.rs
scripts/: build_macos_signed.sh  lightroom_post_export.bat  lightroom_post_export.command  macos_adhoc_sign.sh  macos_codesign_report.sh  prepare_bundled_exiftool.sh  verify_exiftool_license.sh
