[workspace]
members = ["crates/core", "crates/cli", "crates/gui/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
directories = "6"
kamadak-exif = "0.6"
exiftool = "0.3"
clap = { version = "4.5.60", features = ["derive"] }
toml = "1.0.3"
rayon = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
