[package]
name = "fphoto_renamer_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
directories.workspace = true
kamadak-exif.workspace = true
exiftool.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
